kubernetes/bastion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-d-devops-bastion
  namespace: ops
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ing-d-devops-bastion"
    networking.gke.io/managed-certificates: crt-d-devops-bastion
    networking.gke.io/v1beta1.FrontendConfig: fcf-d-devops-bastion
    spec.ingressClassName: "gce"
spec:
  defaultBackend:
    service:
      name: bastion
      port:
        number: 80
